<resources>
    <string name="app_name">PTube</string>

    <string name="number_del">Delete</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>

    <string name="welcome_to_p_tube">WELCOME TO P-TUBE</string>
    <string name="enter_p_tube_pin">ENTER P-TUBE PIN</string>
    <string name="confirm_p_tube_pin">CONFIRM P-TUBE PIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_user_fragemnt">login_user_fragemnt</string>
    <string name="create_user_fragment">create_user_fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
