<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragement.InputFragment">


    <TableLayout
        android:layout_width="0dp"

        android:layout_height="195dp"
        android:stretchColumns="0,1,2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/number_1"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/number_2"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/number_3"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/number_4"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/number_5"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/number_6"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/number_7"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/number_8"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/number_9"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttondel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/number_del"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/number_0"
                android:textColor="#d2d1d1"
                android:textSize="24sp"
                android:typeface="serif" />

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>
